--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -22,7 +22,7 @@ description: >
 language: "en"
 
 # A default image for your site, e.g. for social-media snippets
-image: "reading.png"
+image: "poster.png"
 
 # The logo for your site, if you have one
 logo: "reading.png"
