--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -7,3 +7,11 @@
 #     - label: "Our team"
 #       link: "team"
 
+- label: "Home"
+  link: ""
+- label: "Participate"
+  link: "#participate"
+- label: "Spread the word"
+  link: "#spread-the-word"
+- label: "Background"
+  link: "#background"
