WIP: create separate book pages and add new copy

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,7 +6,7 @@
 name: "One Day. One Book."
 
 # A tagline for your site, often shown with the name
-tagline: "Creating children's books together"
+tagline: "Indigenous-Language Storybooks"
 
 # A description of your site, e.g. for social-media snippets
 description: >
