Add books and complete styling

--- a/_data/locales.yml
+++ b/_data/locales.yml
@@ -138,7 +138,7 @@ en:
   excerpt:
     more: "More"
   footer:
-    credit: "Hosted by [Room to Read](http://roomtoread.org). Managed by [Fire and Lion](https://fireandlion.com). Email [info@onedayonebook.org](mailto:info@onedayonebook.org). Image from *Graca's Dream* by Karlien de Villiers, Marike le Roux and Melissa Fagan"
+    credit: "Mother reading to child image from *Graca's Dream* by Karlien de Villiers, Marike le Roux and Melissa Fagan"
   input:
     send: "Send"
     submit: "Submit"
