--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
   "homepage": "https://github.com/fireandlion/jekyll-starter#readme",
   "devDependencies": {
     "file-exists": "^5.0.1",
-    "gulp": "^3.9.1",
-    "gulp-eslint": "^3.0.1",
+    "gulp": "^4.0.0",
+    "gulp-debug": "^4.0.0",
     "gulp-gm": "0.0.8",
     "gulp-newer": "^1.3.0",
     "gulp-rename": "^1.2.2",
-    "gulp-responsive-images": "0.0.3",
+    "gulp-responsive-images": "github:electricbookworks/gulp-responsive-images",
     "gulp-svgmin": "^1.2.4",
-    "gulp-uglify": "^2.1.2",
-    "gulp-watch": "^4.3.11"
+    "gulp-uglify": "^2.1.2"
   }
 }
