Update phrase for match with English

--- a/_data/locales.yml
+++ b/_data/locales.yml
@@ -604,7 +604,7 @@ nso:
     illustrated-by: "Illustrated by*"
     designed-by: "Designed by*"
     edited-by: "Edited by*"
-    originally-in: "Original in*"
+    originally-in: "Originally written in*"
     supported-by: "Supported by*"
     download-pdf: "Download PDF*"
     source-files: "Source files*"
